syntax = "proto3";

package clica;

import "clica/common.proto";

option go_package = "github.com/clica/grpc-go/clica";
option java_multiple_files = true;
option java_package = "bot.clica.proto";

// SlashService provides methods for managing slash
service SlashService {
  // Sends button click message
  rpc reportBug(StringRequest) returns (Empty);
  rpc condense(StringRequest) returns (Empty);
}
